--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Code yodha</title>
 </head>
 <body>
-    hello world
+    <h1>Code yodha</h1>
 </body>
 </html>
 <!-- 
