--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code yodha</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Code yodha</h1>
-</body>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quidem
+      error, molestias beatae tenetur nulla. Odit amet quae molestias quia a,
+      aliquid sunt, perferendis vitae consectetur perspiciatis cupiditate ut
+      rerum.
+    </p>
+  </body>
 </html>
-<!-- 
-echo "# codeyodha" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/teamharsh/codeyodha.git
-git push -u origin main -->
+<!--for push  -->
+<!-- git add .
+ git commit -m "message"
+ git push origin main -->
