--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Code yodha</title>
+    <title>Event Management</title>
+    <link rel="icon" href="images/icon.jpeg"/>
   </head>
   <body>
     <h1>Code yodha</h1>
