Basic_HTML_Structure

--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event Management</title>
-    <link rel="icon" href="images/icon.jpeg"/>
+    <link rel="icon" href="images/icon.jpeg" />
+    <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
-    <h1>Code yodha</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quidem
-      error, molestias beatae tenetur nulla. Odit amet quae molestias quia a,
-      aliquid sunt, perferendis vitae consectetur perspiciatis cupiditate ut
-      rerum.
-    </p>
+    <div class="container"></div>
+    <script src="js/index.js"></script>
   </body>
 </html>
 <!--for push  -->
