--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   </head>
+
   <body>
     <div class="container">
       <div class="page1">
@@ -29,21 +31,21 @@
       <div class="page5"></div>
       <div class="page6">
         <footer class="footer">
-            <div class="container">
+            <div class="container_footer">
              <div class="row">
               <div class="footer-col">
-               <h4>company</h4>
+               <h4>Information</h4>
                <ul>
-                <li><a href="#">about us</a></li>
-                <li><a href="#">our services</a></li>
-                <li><a href="#">privacy policy</a></li>
-                <li><a href="#">affiliate program</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms & Conditions</a></li>  
                </ul>
               </div>
               <div class="footer-col">
-               <h4>get help</h4>
+               <h4>Get Heip</h4>
                <ul>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="#"></a></li>
                 <li><a href="#">shipping</a></li>
                 <li><a href="#">returns</a></li>
                 <li><a href="#">order status</a></li>
@@ -51,12 +53,12 @@
                </ul>
               </div>
               <div class="footer-col">
-               <h4>online shop</h4>
+               <h4>Location:</h4>
                <ul>
-                <li><a href="#">watch</a></li>
-                <li><a href="#">bag</a></li>
-                <li><a href="#">shoes</a></li>
-                <li><a href="#">dress</a></li>
+                <li><h5>Purnea College of Engineering,</h5></li>
+                <li><a href="https://maps.app.goo.gl/jr39aNKascTmfebc9">AT-Polytechnic Chowk,
+                    Near Ram Nagar & Subhas Nagar,
+                    Purnia, Bihar – 854303</a></li>
                </ul>
               </div>
               <div class="footer-col">
@@ -69,6 +71,10 @@
                </div>
               </div>
              </div>
+            </div>
+            <div class="container_footer" >
+                <br> 
+                © 2023 Copyright:
             </div>
           </footer>
         
