--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
                </ul>
               </div>
               <div class="footer-col">
-               <h4>Get Heip</h4>
+               <h4>Upcoming Events</h4>
                <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#">shipping</a></li>
-                <li><a href="#">returns</a></li>
-                <li><a href="#">order status</a></li>
-                <li><a href="#">payment options</a></li>
+                <li><a href="#">Hackathon</a></li>
+                <li><a href="#">Photography</a></li>
+                <li><a href="#">Startup</a></li>
+                <li><a href="#">Independence Day</a></li>
                </ul>
               </div>
               <div class="footer-col">
