--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="container_footer" >
                 <br> 
-                © 2023 Copyright:
+                © 2023 Copyright: Team-parallax
             </div>
           </footer>
         
