--- a/index.html
+++ b/index.html
@@ -17,9 +17,39 @@
           <h3>Event Management</h3>
           <button>Contact US</button>
         </nav>
-        <div class="detail"></div>
+        <div class="detail">
+          <h3 id="freedom">FREEDOM FEST</h3>
+          <h2>PURNEA COLLEGE OF ENGINEERING, PURNEA</h2>
+          <img src="images/gmail.png" alt="mail_pic" srcset="" />
+        </div>
       </div>
-      <div class="page2"></div>
+      <div class="page2">
+        <h2>About:</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ipsa
+          voluptate enim tempore sit beatae ex minus at amet a temporibus vero,
+          omnis dolor accusamus sapiente veniam fugit sed recusandae explicabo
+          iusto! Minima esse at iure vel blanditiis consectetur quia. Lorem
+          ipsum dolor sit amet consectetur adipisicing elit. Quae nemo facere
+          perferendis sapiente maxime. Enim excepturi labore, voluptas provident
+          porro ullam. Maiores aut consectetur odio corporis expedita rem
+          aspernatur est non, nisi error. Placeat aperiam repudiandae quaerat
+          saepe! Nostrum, eveniet.
+        </p>
+        <h1>Upcoming Event:</h1>
+        <div class="row_1_upcoming_events">
+          <div class="img">
+            <div class="upcoming_events">
+              <img class="event_img" src="images/div1.jpg" alt="coding" />
+              <div class="overlay">
+                <div class="text">
+                  <h3>Hackathon</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="page3"></div>
       <div class="page4"></div>
       <div class="page5"></div>
