--- a/index.html
+++ b/index.html
@@ -53,8 +53,19 @@
                 </div>
               </div>
             </div>
+            <div class="upcoming_events">
+              <img class="event_img" src="images/startup.jpg" alt="coding" width="" height="30px" />
+              <div class="overlay">
+                <div class="text">
+                  <h3>Startup</h3>
+                </div>
+              </div>
+            </div>
           </div>
+          
         </div>
+        
+
       </div>
       <div class="page3"></div>
       <div class="page4"></div>
