--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="container">
       <div class="page1">
         <nav class="nav">
-          <h3>Event Management</h3>
-          <button>Contact US</button>
+          <h3>Events</h3>
+          <button>Admin Login</button>
         </nav>
         <div class="detail">
           <h3 id="freedom">FREEDOM FEST</h3>
@@ -31,16 +31,9 @@
       </div>
       <div class="page2">
         <h2>About:</h2>
+        <br>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ipsa
-          voluptate enim tempore sit beatae ex minus at amet a temporibus vero,
-          omnis dolor accusamus sapiente veniam fugit sed recusandae explicabo
-          iusto! Minima esse at iure vel blanditiis consectetur quia. Lorem
-          ipsum dolor sit amet consectetur adipisicing elit. Quae nemo facere
-          perferendis sapiente maxime. Enim excepturi labore, voluptas provident
-          porro ullam. Maiores aut consectetur odio corporis expedita rem
-          aspernatur est non, nisi error. Placeat aperiam repudiandae quaerat
-          saepe! Nostrum, eveniet.
+          Purnea College of Engineering, Purnea is a Government Engineering College established in 2017. Inaugural of this Institute was held on 17 Feb 2019 by the honorable chief minister of Bihar, Sri Nitish Kumar. It is affiliated to AKU, Patna. The College is under the Department of Science and Technology Patna, Bihar. The institute offers B.Tech in Civil Engineering, Electrical Engineering, Electronics and Communication Engineering, Mechanical Engineering, Computer Science & Engineering, and Computer Science & Engineering(Artificial Intelligence). Each course has an intake capacity of 60 approved by AICTE, New Delhi.
         </p>
         <h1>Upcoming Event:</h1>
         <div class="row_1_upcoming_events">
@@ -50,6 +43,8 @@
               <div class="overlay">
                 <div class="text">
                   <h3>Hackathon</h3>
+                  <br>
+                  <p> A hackathon is typically a time-bound competitive event where participants collaborate to build proofs of concept and minimum viable products for a specific pre-defined problem or to innovate.</p>
                 </div>
               </div>
             </div>
@@ -58,11 +53,37 @@
               <div class="overlay">
                 <div class="text">
                   <h3>Startup</h3>
+                  <br>
+                  <p>A startup is a business that is currently in its formation stages, or early stages of growth, that works to bring a new product or service to market.</p>
                 </div>
               </div>
             </div>
           </div> 
-        </div> 
+        </div>
+        <div class="row_2_upcoming_events">
+          <div class="img">
+            <div class="upcoming_events">
+              <img class="event_img" src="images/photography.jpeg" alt="coding" />
+              <div class="overlay">
+                <div class="text">
+                  <h3>Photography</h3>
+                  <br>
+                  <p>Photography is the art, application, and practice of creating images by recording light, either electronically by means of an image sensor, or chemically by means of a light-sensitive material such as photographic film.</p>
+                </div>
+              </div>
+            </div>
+            <div class="upcoming_events">
+              <img class="event_img" src="images/flag.jpeg" alt="coding" width="" height="30px" />
+              <div class="overlay">
+                <div class="text">
+                  <h3>Independence Day</h3>
+                  <br>
+                  <p>Independence Day is celebrated annually on 15 August as a public holiday in India commemorating the nation's independence from the United Kingdom on 15 August 1947, the day when the provisions of the Indian Independence Act, which transferred legislative sovereignty to the Indian Constituent Assembly, came into effect.</p>
+                </div>
+              </div>
+            </div>
+          </div> 
+        </div>  
       </div>
       <div class="page3"></div>
       <div class="page4"></div>
