--- a/Admin.html
+++ b/Admin.html
@@ -8,6 +8,7 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+      <link rel="icon" href="./images/icon.jpeg"/>
   </head>
   <body>
     <div class="wrapper">
@@ -30,9 +31,9 @@
           <div class="error error-txt">Password can't be blank</div>
         </div>
         <div class="pass-txt"><a href="#">Forgot password?</a></div>
-        <input type="submit" value="Login" />
+   
+        <button type="submit" class="login" ><a href="./Dashboard.html" onclick="checkAdmin()">Login</a></button>
       </form>
-      <div class="sign-txt">Not yet member? <a href="#">Signup now</a></div>
     </div>
 
     <script src="./js/loginPage.js"></script>
