--- a/events.html
+++ b/events.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Events</title>
     <link rel="stylesheet" href="./styles/events.css" />
+    <link rel="icon" href="./images/icon.jpeg"/>
   </head>
   <body>
     <h2>Events</h2>
@@ -29,7 +30,7 @@
 
       <li>
         <a href="#"
-          ><img src="./images/stratup.png" alt="Startup" srcset="" />Start UP</a
+          ><img src="./images/startup.jpg" alt="Startup" srcset="" />Start UP</a
         >
       </li>
       <li>
@@ -46,7 +47,7 @@
       </li>
       <li>
         <a href="#"
-          ><img src="./images/bacgroundOfDashboard.jpg" alt="" />Photography</a
+          ><img src="./images/photography.jpeg" alt="" />Photography</a
         >
       </li>
       <li>
