--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="container">
       <div class="page1">
         <nav class="nav">
-          <h3>Events</h3>
-          <button>Admin Login</button>
+          <h3><a href="./events.html">Events</a></h3>
+          <button><a href="./Admin.html">Admin Login</a></button>
         </nav>
         <div class="detail">
           <h3 id="freedom">FREEDOM FEST</h3>
@@ -35,6 +35,7 @@
         <p>
           Purnea College of Engineering, Purnea is a Government Engineering College established in 2017. Inaugural of this Institute was held on 17 Feb 2019 by the honorable chief minister of Bihar, Sri Nitish Kumar. It is affiliated to AKU, Patna. The College is under the Department of Science and Technology Patna, Bihar. The institute offers B.Tech in Civil Engineering, Electrical Engineering, Electronics and Communication Engineering, Mechanical Engineering, Computer Science & Engineering, and Computer Science & Engineering(Artificial Intelligence). Each course has an intake capacity of 60 approved by AICTE, New Delhi.
         </p>
+        <br>
         <h1>Upcoming Event:</h1>
         <div class="row_1_upcoming_events">
           <div class="img">
@@ -85,7 +86,20 @@
           </div> 
         </div>  
       </div>
-      <div class="page3"></div>
+      <div class="page3">
+        <div class="gallery">
+          <h1>Image Gallery:</h1>
+          <div class="picture">
+            <img src="images/1.jpg" alt="images" width="24%" height="24%">
+            <img src="images/2.jpg" alt="images" width="24%" height="24%">
+            <img src="images/3.jpg" alt="images" width="24%" height="24%">
+            <img src="images/4.jpg" alt="images" width="24%" height="24%">
+            <img src="images/5.jpg" alt="images" width="24%" height="24%">
+            <img src="images/7.jpg" alt="images" width="24%" height="24%">
+            
+          </div>
+        </div>
+      </div>
       <div class="page4"></div>
       <div class="page5"></div>
       <div class="page6">
@@ -104,10 +118,10 @@
               <div class="footer-col">
                <h4>Upcoming Events</h4>
                <ul>
-                <li><a href="#">Hackathon</a></li>
-                <li><a href="#">Photography</a></li>
-                <li><a href="#">Startup</a></li>
-                <li><a href="#">Independence Day</a></li>
+                <li><a href="./events.html">Hackathon</a></li>
+                <li><a href="./events.html">Photography</a></li>
+                <li><a href="./events.html">Startup</a></li>
+                <li><a href="./events.html">Independence Day</a></li>
                </ul>
               </div>
               <div class="footer-col">
@@ -141,7 +155,3 @@
     <script src="js/index.js"></script>
   </body>
 </html>
-<!--for push  -->
-<!-- git add .
- git commit -m "message"
- git push origin main -->
