--- a/Dashboard.html
+++ b/Dashboard.html
@@ -8,6 +8,7 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+      <link rel="icon" href="./images/icon.jpeg"/>
   </head>
   <body>
     <h1>Event Management Dashboard</h1>
