--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <button><a href="./Admin.html">Admin Login</a></button>
         </nav>
         <div class="detail">
-          <h3 id="freedom">FREEDOM FEST</h3>
+          <h3 id="freedom">FREEDOM FEST-23</h3>
           <h2>PURNEA COLLEGE OF ENGINEERING, PURNEA</h2>
           <img src="images/gmail.png" alt="mail_pic" srcset="" />
         </div>
