--- a/Admin.html
+++ b/Admin.html
@@ -7,7 +7,7 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-      <link rel="icon" href="./images/icon.jpeg"/>
+    <link rel="icon" href="./images/icon.jpeg" />
   </head>
   <body>
     <div class="wrapper">
@@ -15,24 +15,24 @@
       <form action="#">
         <div class="field email">
           <div class="input-area">
-            <input type="text" placeholder="Email Address" />
+            <input type="email" placeholder="Email Address" id="email" />
             <i class="icon fas fa-envelope"></i>
             <i class="error error-icon fas fa-exclamation-circle"></i>
           </div>
-          <div class="error error-txt">Email can't be blank</div>
         </div>
         <div class="field password">
           <div class="input-area">
-            <input type="password" placeholder="Password" />
+            <input type="password" placeholder="Password" id="password" />
             <i class="icon fas fa-lock"></i>
             <i class="error error-icon fas fa-exclamation-circle"></i>
           </div>
-          <div class="error error-txt">Password can't be blank</div>
         </div>
-        <div class="pass-txt"><a href="#">Forgot password?</a></div>
-   
-        <button type="submit" class="login" ><a href="./Dashboard.html" onclick="checkAdmin()">Login</a></button>
+
+        <button type="submit" class="login" onclick="login()">Login</button>
       </form>
+      <div class="sign-txt">
+        Not yet member? <a href="sign_up.html">Signup now</a>
+      </div>
     </div>
 
     <script src="./js/loginPage.js"></script>
