--- a/Dashboard.html
+++ b/Dashboard.html
@@ -8,9 +8,15 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-      <link rel="icon" href="./images/icon.jpeg"/>
+    <link rel="icon" href="./images/icon.jpeg" />
   </head>
   <body>
+    <h1>
+      Welcome
+      <script>
+        document.write(localStorage.getItem('name1'));
+      </script>
+    </h1>
     <h1>Event Management Dashboard</h1>
     <div class="container">
       <div class="left">
