--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Events</title>
     <link rel="stylesheet" href="./styles/events.css" />
-    <link rel="icon" href="./images/icon.jpeg"/>
+    <link rel="icon" href="./images/icon.jpeg" />
   </head>
   <body>
     <h2>Events</h2>
@@ -19,50 +19,91 @@
 
     <ul id="myUL">
       <li>
-        <a href="#"><img src="./images/div1.jpg" alt="Hackathon" />Hackathon</a>
+        <div class="event">
+          <img src="./images/div1.jpg" alt="Hackathon" />
+          <a href="Hackathon.html">Hackathon</a>
+        </li>
+
+
+        </div>
+      <li>
+        <div class="event">
+          <img src="./images/startup.jpg" alt="Startup" srcset="" />
+          <a href="startUp.html"
+          >Start UP</a
+          >
+
+        </div>
+      </li>
+
+      <li>
+        <div class="event">
+          <img src="./images/chess.jpg" alt="" srcset="" />
+          <a href="Chess.html">Chess</a>
+        </li>
+        <li>
+
+        </div>
+        <div class="event">
+          <img src="./images/quiz.jpg" alt="" />
+          <a href="Quiz.html">Quiz</a>
+        </li>
+        <li>
+
+        </div>
+        <div class="event">
+          <img src="./images/photography.jpeg" alt="" />
+          <a href="Photography.html"
+          >Photography</a
+          >
+
+        </div>
       </li>
       <li>
-        <a href="#"
-          ><img src="./images/flag.jpg" alt="flag" srcset="" />Independence
+        <div class="event">
+          <img src="./images/puzzle.jpeg" alt="" />
+          <a href="Puzzle.html">Puzzle</a>
+        </li>
+        <li>
+
+        </div>
+        <div class="event">
+          <img src="./images/Debate.jpg" alt="" />
+          <a href="Debate_competition.html"
+          >Debate competition</a
+          >
+
+        </div>
+      </li>
+      <li>
+        <div class="event">
+          <img src="./images/flag.jpg" alt="flag" srcset="" />
+          <a href="#"
+          >Independence
           Day</a
-        >
+          >
+
+        </div>
       </li>
 
       <li>
-        <a href="#"
-          ><img src="./images/startup.jpg" alt="Startup" srcset="" />Start UP</a
-        >
-      </li>
-      <li>
-        <a href="#"
-          ><img src="./images/arm-wrestling.jpg" alt="" />Arm Wrestling</a
-        >
-      </li>
+        <div class="event">
+          <img src="./images/rubiks.jpg" alt="" />
+          <a href="Rubik's_Cube.html">Rubik's Cube</a>
+        </li>
+        <li>
 
-      <li>
-        <a href="#"><img src="./images/chess.jpg" alt="" srcset="" />Chess</a>
+        </div>
+        <div class="event">
+          <img src="./images/sudoku.jpg" alt="" />
+          <a href="Sudoku_puzzles.html">Sudoku puzzles</a>
+        </div>
       </li>
       <li>
-        <a href="#"><img src="./images/quiz.jpg" alt="" />Quiz</a>
-      </li>
-      <li>
-        <a href="#"
-          ><img src="./images/photography.jpeg" alt="" />Photography</a
-        >
-      </li>
-      <li>
-        <a href="#"
-          ><img src="./images/Debate.jpg" alt="" />Debate competition</a
-        >
-      </li>
-      <li>
-        <a href="#"><img src="./images/rubiks.jpg" alt="" />Rubik's Cube</a>
-      </li>
-      <li>
-        <a href="#"><img src="./images/sudoku.jpg" alt="" />Sudoku puzzles</a>
-      </li>
-      <li>
-        <a href="#"><img src="./images/puzzle.jpeg" alt="" />Puzzle</a>
+        <div class="event">
+          <img src="./images/arm-wrestling.jpg" alt="" />
+          <a href="Arm Wrestling.html">Arm Wrestling</a>
+        </div>
       </li>
     </ul>
     <script src="./js/events.js"></script>
