--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="detail">
           <h3 id="freedom">FREEDOM FEST-23</h3>
           <h2>PURNEA COLLEGE OF ENGINEERING, PURNEA</h2>
-          <img src="images/gmail.png" alt="mail_pic" srcset="" />
+          <a href="mailto:pcep.academic@gmail.com"><img src="images/gmail.png" alt="mail_pic" srcset="" /></a>
         </div>
       </div>
       <div class="page2">
@@ -90,12 +90,12 @@
         <div class="gallery">
           <h1>Image Gallery:</h1>
           <div class="picture">
-            <img src="images/1.jpg" alt="images" width="24%" height="24%">
-            <img src="images/2.jpg" alt="images" width="24%" height="24%">
-            <img src="images/3.jpg" alt="images" width="24%" height="24%">
-            <img src="images/4.jpg" alt="images" width="24%" height="24%">
-            <img src="images/5.jpg" alt="images" width="24%" height="24%">
-            <img src="images/7.jpg" alt="images" width="24%" height="24%">
+            <img src="images/1.jpg" alt="images" width="30%" height="30%">
+            <img src="images/2.jpg" alt="images" width="30%" height="30%">
+            <img src="images/3.jpg" alt="images" width="30%" height="30%">
+            <img src="images/4.jpg" alt="images" width="30%" height="30%">
+            <img src="images/5.jpg" alt="images" width="30%" height="30%">
+            <img src="images/7.jpg" alt="images" width="30%" height="30%">
             
           </div>
         </div>
@@ -136,10 +136,10 @@
               <div class="footer-col">
                <h4>follow us</h4>
                <div class="social-links">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/pcegov/?ref=embed_page"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/company/purnea-college-of-engineering-purnea/"><i class="fab fa-linkedin-in"></i></a>
                </div>
               </div>
              </div>
