--- a/Chess.html
+++ b/Chess.html
@@ -1,31 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
+<!DOCTYPE html> 
+<html lang="en"> 
+  <head> 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chess</title>
+    <title>Chess</title> 
     <link rel="stylesheet" href="./styles/everyEvent.css" />
-  </head>
+    <link rel="shortcut icon" href="./images/chess.jpg" type="image/x-icon">
+  </head> 
   <body>
     <div class="container">
       <div class="header">
         <h1>FREEDOM FEST-23</h1>
-        <button type="button"><a href="index.html">Back</a></button>
+        <button type="button"><a href="events.html">Back</a></button>
         <hr />
       </div>
       <div class="detil">
         <div class="left">
           <h2>Chess</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea corporis
-            deserunt excepturi adipisci, ipsum architecto expedita reprehenderit
-            modi distinctio autem sed maiores, quisquam laborum accusantium.
+            Chess is a two-player board game that originated in India in the 6th century. The game is played on a square board with 64 squares arranged in an 8x8 grid. Each player starts with 16 pieces: one king, one queen, two rooks, two knights, two bishops, and eight pawns. 
           </p>
           <div class="register">
-            <button>
+            <button class="registration">
               <a href="https://forms.gle/2UKVPZhD2ZmVPDWB8">Registration</a>
             </button>
-            <button>Share</button>
+            <button class="share"><a href="">Share</a></button>
           </div>
           <h1>13-14th August</h1>
         </div>
