--- a/Independence_Day.html
+++ b/Independence_Day.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Debate competition</title>
     <link rel="stylesheet" href="./styles/everyEvent.css" />
-    <link rel="shortcut icon" href="images/Debate.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/flag.jpeg" type="image/x-icon">
   </head>
   <body>
     <div class="container">
@@ -16,9 +16,11 @@
       </div>
       <div class="detil">
         <div class="left">
-          <h2>Debate competition</h2>
+          <h2>Independence Day</p>
+          </h2>
           <p>
-            Debate competition is a formal contest of ideas where two groups with opposing philosophies on a single topic try to persuade a third party, like a judge or a mediator, to agree with them.
+            Independence Day is celebrated annually on 15 August as a public holiday in India commemorating the nation's independence from the United Kingdom on 15 August 1947, the day when the provisions of the Indian Independence Act, which transferred legislative sovereignty to the Indian Constituent Assembly, came into effect.</p>
+
           </p>
           <div class="register">
             <button class="registration">
@@ -26,11 +28,11 @@
             </button>
             <button class="share">Share</button>
           </div>
-          <h1>13-14th August</h1>
+          <h1>15th August</h1>
         </div>
         <div class="right">
           <h2>Image gallery:-</h2>
-          <img class="photo" src="./images/Debate.jpg" alt="" />
+          <img class="photo" src="./images/flag.jpg" alt="" />
         </div>
       </div>
     </div>
