--- a/Puzzle.html
+++ b/Puzzle.html
@@ -5,27 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Puzzle</title>
     <link rel="stylesheet" href="./styles/everyEvent.css" />
+    <link rel="shortcut icon" href="images/puzzle.jpeg" type="image/x-icon">
   </head>
   <body>
     <div class="container">
       <div class="header">
         <h1>FREEDOM FEST-23</h1>
-        <button type="button"><a href="index.html">Back</a></button>
+        <button type="button"><a href="events.html">Back</a></button>
         <hr />
       </div>
       <div class="detil">
         <div class="left">
           <h2>Puzzle</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea corporis
-            deserunt excepturi adipisci, ipsum architecto expedita reprehenderit
-            modi distinctio autem sed maiores, quisquam laborum accusantium.
+            Puzzles are games or problems that challenge the mind and require logic, creativity, or skill to solve. They can be in the form of words, numbers, images, or physical objects. Puzzles can be fun, educational, or both.
           </p>
           <div class="register">
-            <button>
+            <button class="registration">
               <a href="https://forms.gle/2UKVPZhD2ZmVPDWB8">Registration</a>
             </button>
-            <button>Share</button>
+            <button class="share">Share</button>
           </div>
           <h1>13-14th August</h1>
         </div>
