--- a/Quiz.html
+++ b/Quiz.html
@@ -5,27 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz</title>
     <link rel="stylesheet" href="./styles/everyEvent.css" />
+    <link rel="shortcut icon" href="images/quiz.jpg" type="image/x-icon">
   </head>
   <body>
     <div class="container">
       <div class="header">
         <h1>FREEDOM FEST-23</h1>
-        <button type="button"><a href="index.html">Back</a></button>
+        <button type="button"><a href="events.html">Back</a></button>
         <hr />
       </div>
       <div class="detil">
         <div class="left">
           <h2>Quiz</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea corporis
-            deserunt excepturi adipisci, ipsum architecto expedita reprehenderit
-            modi distinctio autem sed maiores, quisquam laborum accusantium.
+            Quiz is a form of game or mind sport in which participants attempt to answer questions correctly. It is a popular way to test one’s knowledge, skills, and memory. Quiz can be used for education, entertainment, or competition.
           </p>
           <div class="register">
-            <button>
+            <button class="registration">
               <a href="https://forms.gle/2UKVPZhD2ZmVPDWB8">Registration</a>
             </button>
-            <button>Share</button>
+            <button class="share">Share</button>
           </div>
           <h1>13-14th August</h1>
         </div>
