--- a/Rubik's_Cube.html
+++ b/Rubik's_Cube.html
@@ -5,27 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rubik's Cube</title>
     <link rel="stylesheet" href="./styles/everyEvent.css" />
+    <link rel="shortcut icon" href="images/rubiks.jpg" type="image/x-icon">
   </head>
   <body>
     <div class="container">
       <div class="header">
         <h1>FREEDOM FEST-23</h1>
-        <button type="button"><a href="index.html">Back</a></button>
+        <button type="button"><a href="events.html">Back</a></button>
         <hr />
       </div>
       <div class="detil">
         <div class="left">
           <h2>Rubik's Cube</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea corporis
-            deserunt excepturi adipisci, ipsum architecto expedita reprehenderit
-            modi distinctio autem sed maiores, quisquam laborum accusantium.
+            Rubik’s Cube is a 3D puzzle that has six faces with nine stickers of different colors. The goal is to twist the cube until each face has only one color. Rubik’s Cube is a popular toy and hobby that challenges the mind and improves spatial skills.
+
+
           </p>
           <div class="register">
-            <button>
+            <button class="registration">
               <a href="https://forms.gle/2UKVPZhD2ZmVPDWB8">Registration</a>
             </button>
-            <button>Share</button>
+            <button class="share">Share</button>
           </div>
           <h1>13-14th August</h1>
         </div>
