--- a/events.html
+++ b/events.html
@@ -6,9 +6,10 @@
     <title>Events</title>
     <link rel="stylesheet" href="./styles/events.css" />
     <link rel="icon" href="./images/icon.jpeg" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <h2>Events</h2>
+    <h2 class="header"><a href="index.html"><i class="fa fa-caret-left" style="font-size:24px"></i></a> Events</h2>
 
     <input
       type="text"
@@ -78,7 +79,7 @@
       <li>
         <div class="event">
           <img src="./images/flag.jpg" alt="flag" srcset="" />
-          <a href="#"
+          <a href="Independence_Day.html"
           >Independence
           Day</a
           >
