--- a/startUp.html
+++ b/startUp.html
@@ -5,27 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Start Up</title>
     <link rel="stylesheet" href="./styles/everyEvent.css" />
+    <link rel="shortcut icon" href="images/startup.jpg" type="image/x-icon">
   </head>
   <body>
     <div class="container">
       <div class="header">
         <h1>FREEDOM FEST-23</h1>
-        <button type="button"><a href="index.html">Back</a></button>
+        <button type="button"><a href="events.html">Back</a></button>
         <hr />
       </div>
       <div class="detil">
         <div class="left">
           <h2>Start Up</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea corporis
-            deserunt excepturi adipisci, ipsum architecto expedita reprehenderit
-            modi distinctio autem sed maiores, quisquam laborum accusantium.
+            A startup is a business that is currently in its formation stages, or early stages of growth, that works to bring a new product or service to market.</p>
+
           </p>
           <div class="register">
-            <button>
+            <button class="registration">
               <a href="https://forms.gle/2UKVPZhD2ZmVPDWB8">Registration</a>
             </button>
-            <button>Share</button>
+            <button class="share">Share</button>
           </div>
           <h1>13-14th August</h1>
         </div>
