--- a/Arm Wrestling.html
+++ b/Arm Wrestling.html
@@ -5,27 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arm Wrestling</title>
     <link rel="stylesheet" href="./styles/everyEvent.css" />
+    <link rel="shortcut icon" href="images/arm-wrestling.jpg" type="image/x-icon">
   </head>
   <body>
     <div class="container">
       <div class="header">
         <h1>FREEDOM FEST-23</h1>
-        <button type="button"><a href="index.html">Back</a></button>
+        <button type="button"><a href="events.html">Back</a></button>
         <hr />
       </div>
       <div class="detil">
         <div class="left">
           <h2>Arm Wrestling</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea corporis
-            deserunt excepturi adipisci, ipsum architecto expedita reprehenderit
-            modi distinctio autem sed maiores, quisquam laborum accusantium.
+            Arm wrestling is a sport in which two opponents sit opposite each other with one elbow resting on a table, clasp each other’s hands, and try to force each other’s arm down on to the table.
           </p>
           <div class="register">
-            <button>
+            <button class="registration">
               <a href="https://forms.gle/2UKVPZhD2ZmVPDWB8">Registration</a>
             </button>
-            <button>Share</button>
+            <button class="share">Share</button>
           </div>
           <h1>13-14th August</h1>
         </div>
